--- a/pub/css/pomodoro.css
+++ b/pub/css/pomodoro.css
@@ -392,6 +392,7 @@
     width: 100%;
     height: 100%;
     background: rgba(0, 0, 0, 0.5);
+    -webkit-backdrop-filter: blur(3px);
     backdrop-filter: blur(3px);
     z-index: 1000;
     opacity: 0;
