--- a/pub/css/notlar.css
+++ b/pub/css/notlar.css
@@ -192,7 +192,7 @@
     overflow: hidden;
     text-overflow: ellipsis;
     display: -webkit-box;
-    -webkit-line-clamp: 2;
+    line-clamp: 2;
     -webkit-box-orient: vertical;
 }
 
@@ -247,7 +247,7 @@
     overflow: hidden;
     text-overflow: ellipsis;
     display: -webkit-box;
-    -webkit-line-clamp: 5;
+    line-clamp: 5;
     -webkit-box-orient: vertical;
 }
 
@@ -564,6 +564,6 @@
     }
     
     .note-content {
-        -webkit-line-clamp: 3;
+        line-clamp: 3;
     }
 }
