--- a/pub/css/responsive.css
+++ b/pub/css/responsive.css
@@ -166,6 +166,24 @@
     .feature-description {
         font-size: 1rem;
     }
+
+    .section-header {
+        margin-bottom: 40px;
+    }
+    
+    .section-title {
+        font-size: 2.2rem;
+    }
+    
+    .section-title::after {
+        width: 60px;
+        bottom: -8px;
+    }
+    
+    .section-subtitle {
+        font-size: 1.1rem;
+        padding-top: 15px;
+    }
 }
 
 @media screen and (max-width: 576px) {
@@ -306,5 +324,18 @@
     
     .feature-description {
         font-size: 0.9rem;
+    }
+
+    .section-title {
+        font-size: 1.8rem;
+    }
+    
+    .section-title::after {
+        width: 50px;
+        height: 2px;
+    }
+    
+    .section-subtitle {
+        font-size: 1rem;
     }
 }
