--- a/pub/css/scroll.css
+++ b/pub/css/scroll.css
@@ -36,12 +36,16 @@
 .fade-in-up {
     transform: translateY(60px) translateZ(0);
     filter: blur(5px);
+    background-color: transparent !important;
+    box-shadow: none !important;
 }
 
 .fade-in-up.active {
     opacity: 1;
     transform: translateY(0) translateZ(0);
     filter: blur(0);
+    background-color: transparent !important;
+    box-shadow: none !important;
 }
 
 /* Rotasyon ve Ölçeklendirme Animasyonları */
